--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 
     <title>Title</title>
 
-    <link rel="stylesheet" href="./css/main.css">
-    <link rel="stylesheet" href="./lib/swiper.min.css">
-
+    <link rel="stylesheet" href="/demo/3d/css/main.css">
+    <!-- <link href="/demo/3d/lib/swiper.min.css"> -->
+    <link rel="stylesheet" href="/demo/3d/lib/swiper.min.css">
 </head>
 <body>
     <div class="loading">
-        <p>100%</p>
+        <p>模型加载中...</p>
     </div>
     <div class="home">
         <div id="Tween"></div>
@@ -23,29 +23,23 @@
             <!--</div>-->
         <!--</div>-->
     </div>
+     
+    <script src="/demo/3d/lib/jquery.min.js"></script>
+    <script src="/demo/3d/lib/jquery.html5Loader.min.js"></script>
 
+    <script src="/demo/3d/lib/swiper.min.js"></script>
+    <script src="/demo/3d/lib/TweenMax.min.js"></script>
+    <script src="/demo/3d/lib/three.js"></script>
+    <script src="/demo/3d/lib/CanvasRenderer.js"></script>
+    <script src="/demo/3d/lib/Projector.js"></script>  <!--CanvasRenderer 组件-->
+    <script src="/demo/3d/lib/Detector.js"></script> <!--检测当前浏览器是否支持或者开启了WEBGL-->
+    <script src="/demo/3d/lib/stats.min.js"></script><!--性能检测-->
+    <script src="/demo/3d/lib/DeviceOrientationControls.js"></script><!--移动设备控制-->
+    <script src="/demo/3d/lib/OrbitControls.js"></script> <!--鼠标控制-->
+    <script src="/demo/3d/lib/OBJLoader.js"></script> <!--模型加载-->
+    <script src="/demo/3d/lib/THREEx.FullScreen.js"></script>
+    <script src="/demo/3d/lib/THREEx.WindowResize.js"></script>
 
-    <script src="./lib/jquery-1.9.min.js"></script>
-    <script src="./lib/jquery.html5Loader.min.js"></script>
-    <script src="./lib/swiper.jquery.min.js"></script>
-
-    <script src="./lib/TweenMax.min.js"></script>
-
-    <script src="./lib/three.js"></script>
-
-    <script src="./lib/CanvasRenderer.js"></script>
-    <script src="./lib/Projector.js"></script>  <!--CanvasRenderer 组件-->
-
-    <script src="./lib/Detector.js"></script> <!--检测当前浏览器是否支持或者开启了WEBGL-->
-    <script src="./lib/stats.min.js"></script><!--性能检测-->
-    <script src="./lib/DeviceOrientationControls.js"></script><!--移动设备控制-->
-    <script src="./lib/OrbitControls.js"></script> <!--鼠标控制-->
-
-    <script src="./lib/OBJLoader.js"></script> <!--模型加载-->
-
-    <script src="./lib/THREEx.FullScreen.js"></script>
-    <script src="./lib/THREEx.WindowResize.js"></script>
-
-    <script src="./js/main.js"></script>
+    <script src="/demo/3d/js/main.js"></script>
 </body>
 </html>
